# spark-kindling-framework

./: .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_DEVELOPMENT_GUIDE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  EVALUATION_RESULTS.md  LICENSE  PLATFORM_WORKSPACE_CONFIG_SUMMARY.md  PRE_RELEASE_CHECKLIST.md  PROJECT_READINESS_SUMMARY.md  PUBLIC_RELEASE_EVALUATION.md  README.md  RELEASE_NOTES_v0.2.1.md  SECURITY.md  bfs_test_output.txt  coverage.xml  dq4c3roenugcdvsqmjrufksubtvmh0o7  load_env.sh  manifest  pcldu8qsfouk2ohmap6vjcmfbfvohlpm  pyproject.toml  requirements.txt  workspace_diff_raw.json  workspace_diff_report.md
.agent-memory/: ACTIVE_TASK.md  CONVENTIONS.md  DECISIONS.md  WORKSPACE.md  analysis-cli-TASK-20260430-001.md  design-TASK-20260430-001.md  design-TASK-20260430-002.md  design-TASK-20260430-003.md  escalations.md  events.jsonl  pr-TASK-20260429-001.md  pr-TASK-20260430-003.md  test-results-TASK-20260429-001.md  test-results-TASK-20260430-003.md
.agent-memory/mailboxes/: coordinator.md  implementer.md  integrator.md  planner.md  reviewer.md  ship.md  tester.md
.agents/: README.md
.agents/skills/: coordinator.md  escalate.md  implementer.md  integrator.md  planner.md  prime.md  reviewer.md  security.md  ship.md  tester.md
.devcontainer/: AZURE_CLI_SETUP.md  Dockerfile  FIXES.md  JAVA_VERSION_UPDATE.md  README.md  README_LOCAL_MODE.md  TROUBLESHOOTING.md  devcontainer-lock.json  devcontainer.json  docker-compose.yml  fix-docker-credentials.sh  setup-gastown.sh  spark_local_example.py  verify_azure_setup.py
.github/: Dockerfile.ci  Dockerfile.devcontainer  copilot-instructions.md  create_simple_index.py  dependabot.yml  kindling-agent-reference.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.md  documentation.yml  feature_request.md  feature_request.yml
.github/agents/: coordinator.agent.md  implementer.agent.md  integrator.agent.md  planner.agent.md  reviewer.agent.md  security.agent.md  ship.agent.md  tester.agent.md
.github/chatmodes/: claudehelper.chatmode.md
.github/instructions/: memory.instruction.md  project.instructions.md
.github/sessions/: claude-code-session.md  codex-cloud-dispatch.md  codex-local-session.md  vscode-session.md
.github/workflows/: auth-check.yml  ci.yml  databricks-system-tests.yml  system-tests-only.yml
build-configs/: databricks.toml  fabric.toml  synapse.toml
docs/: DEVELOPMENT_WORKFLOW.md  DOCUMENTATION_REORGANIZATION.md  FUTURE_ENHANCEMENTS.md  PLATFORM_WHEEL_ARCHITECTURE.md  PUBLIC_RELEASE_CHECKLIST.md  PUBLIC_RELEASE_PLAN.md  app_framework_analysis.md  app_framework_refactoring_summary.md  azure_cloud_support.md  azure_storage_configuration.md  azure_storage_quickref.md  build_system.md  ci_cd_setup.md  cli_reference.md  config_reference.md  data_entities.md  data_pipes.md  developer_workflow.md  devstories.md  dynamic_registration.md  entity_configuration.md  entity_providers.md  execution_strategy_quick_reference.md  file_ingestion.md  future_enhancements.md  github_packages_guide.md  graph_based_pipe_execution_plan.md  intro.md  job_deployment.md  local_python_first.md  logging_tracing.md  pip_execution_analysis.md  pipe_graph_quick_reference.md  platform_api_architecture.md  platform_api_summary.md  platform_comparison.md  platform_specific_testing.md  platform_workspace_config.md  release_process.md  setup_guide.md  (+8 more)
docs/contributing/: build_system.md  ci_cd_setup.md  declaration_conventions.md  developer_workflow.md  entity_providers.md  execution_strategy_quick_reference.md  graph_based_pipe_execution_plan.md  injection_pattern_analysis.md  job_deployment.md  logging_tracing.md  pipe_graph_quick_reference.md  platform_api_architecture.md  platform_api_summary.md  platform_storage_utils.md  platform_workspace_config.md  release_process.md  signal_opportunities_evaluation.md  signal_quick_reference.md  stdout_streaming.md  testing.md  watermarking.md
docs/guide/: azure_storage_configuration.md  azure_storage_quickref.md  data_entities.md  data_pipes.md  derived_datasets.md  devstories.md  domain_project_quickstart.md  dynamic_registration.md  entity_configuration.md  file_ingestion.md  lakeflow_app_selection.md  local_python_first.md  migrating_from_runmultiple.md  setup_guide.md  temporal_end_to_end.md  temporal_streaming_contract.md  utilities.md
docs/proposals/: cli_overhaul.md  (+37 more)
examples/: poetry_complete_wheels_example.py  poetry_workspace_demo.sh  stdout_streaming_example.py  unified_platform_usage.py
scripts/: README.md  __init__.py  auth_secret_fingerprints.py  build.py  build_extensions.py  build_platform_wheels.sh  bump_version.py  cleanup_old_packages.py  cleanup_test_resources.py  databricks_uc_preflight.py  deploy.py  deploy_extensions.py  ensure_sdp_runtime.py  generate_extension_config.py  generate_platform_config.py  init_azure_dev.sh  manage_uc_volumes.py  publish_devcontainer.py  release.sh  set_github_secrets.sh  test_runner.py  upload_to_storage.sh  workspace_diff.py
tests/: __init__.py  azure_token_provider.py  conftest.py  spark_test_helper.py  test_infrastructure_proposal.md  test_kda_packaging.py
tests/data-apps/lakeflow-scd-test-app/: pyproject.toml
tests/data-apps/lakeflow-scd-test-app/lakeflow_scd_app/: __init__.py
tests/data-apps/lakeflow-temporal-test-app/: pyproject.toml
tests/data-apps/lakeflow-temporal-test-app/lakeflow_temporal_app/: __init__.py
tests/local-project/: pyproject.toml
tests/local-project/apps/sales_ops/: app.py
tests/local-project/config/: env.local.yaml  settings.yaml
tests/local-project/src/sales_ops/: app.py
tests/local-project/src/sales_ops/entities/: orders.py
tests/local-project/src/sales_ops/pipes/: bronze_to_silver.py
tests/local-project/src/sales_ops/transforms/: quality.py
tests/local-project/tests/: conftest.py
tests/local-project/tests/component/: test_registration.py
tests/local-project/tests/integration/: test_pipeline_abfss.py
tests/local-project/tests/unit/: test_quality_transforms.py
(+502 files in other folders)
