[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sales-ops"
version = "0.1.0"
description = "Example Kindling consumer project for local-python-first development validation"
authors = ["SEP Engineering <engineering@sep.com>"]
packages = [{include = "sales_ops", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# kindling is installed separately — either from the kindling-local wheel
# (dist/kindling_local-*.whl) or via `pip install -e /workspaces/kindling`
# for inner-loop source iteration. The manifest does not pin the install path
# so both workflows use the same package definition.
kindling = ">=0.8.14"
pyspark = ">=3.4.0"
delta-spark = ">=2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: local Spark tests, no Azure or ABFSS",
    "component: DI wiring, no ABFSS",
    "integration: requires Spark and ABFSS credentials",
    "requires_azure: skipped when required AZURE_* environment variables are not set",
]
