[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sales-ops"
version = "0.1.0"
description = "Example Kindling consumer project for local-python-first development validation"
authors = ["SEP Engineering <engineering@sep.com>"]
packages = [{include = "sales_ops", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# The runtime distribution is published as `spark-kindling`, while imports
# remain `import kindling`. The standalone extra pulls in local Spark deps.
spark-kindling = {version = ">=0.9.1", extras = ["standalone"]}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
poethepoet = ">=0.24.0"

[tool.poe.tasks]
test-unit = "pytest tests/unit -v"
test-component = "pytest tests/component -v"
test-integration = "pytest tests/integration -v"
test-all = { sequence = ["test-unit", "test-component", "test-integration"] }
test = { sequence = ["test-unit", "test-component"] }
build = "poetry build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: local Spark tests, no Azure or ABFSS",
    "component: DI wiring, no ABFSS",
    "integration: requires Spark and ABFSS credentials",
    "requires_azure: skipped when required AZURE_* environment variables are not set",
]
