[tool.poetry]
name = "lakeflow-scd-test-app"
version = "0.1.0"
description = "System-test data app: minimal SCD2 declared flow for Lakeflow AUTO CDC validation"
authors = ["Kindling Team"]
packages = [{ include = "lakeflow_scd_app" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.plugins."spark_kindling.data_apps"]
lakeflow_scd = "lakeflow_scd_app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
